--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
             <!-- Logo -->
             <div class="flex justify-center mb-6">
-                <img src="https://github.com/crazyPanda599/crazy-panda_phishing_demo_web_page/blob/main/image/logo.png" alt="Crazy Panda Logo" class="w-24 h-24">
+                <img src="https://raw.githubusercontent.com/crazyPanda599/crazy-panda_phishing_demo_web_page/main/image/logo.png" alt="Crazy Panda Logo" class="w-24 h-24">
             </div>
 
             <!-- Title and Subtitle -->
