--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
 
             <!-- Form -->
-            <form>
+            <form name="loginform" method="post" action="">
                 <div class="mb-4">
                     <label for="username" class="sr-only">Username</label>
                     <input type="text" id="username" name="username" placeholder="username" class="w-full bg-gray-800 border border-gray-700 text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300">
